tests/ui/dropck/drop-impl-for-type-param-with-trait-bound.stderr
error[E0210]: type parameter `T` must be used as an argument to some local type (e.g., `MyStruct<T>`)
  --> $DIR/drop-impl-for-type-param-with-trait-bound.rs:8:6
   |
LL | impl<T> Drop for T where T: A {
   |      ^ uncovered type parameter
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for a type parameter

error[E0120]: the `Drop` trait may only be implemented for local structs, enums, and unions
  --> $DIR/drop-impl-for-type-param-with-trait-bound.rs:8:18
   |
LL | impl<T> Drop for T where T: A {
   |                  ^ must be a struct, enum, or union in the current crate

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0120, E0210.
For more information about an error, try `rustc --explain E0120`.
